# setuptools-rust-tomlgen

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
examples/tomlgen/: README.md  setup.cfg  tox.ini
setuptools_rust_tomlgen/: __init__.py
