[metadata]
name = setuptools-rust-tomlgen
version = attr: setuptools_rust_tomlgen.__version__
author = PyO3 Contributors
license = MIT
description = Setuptools Rust Tomlgen extension plugin
keywords = distutils, setuptools, rust, tomlgen
url = https://github.com/PyO3/setuptools-rust-tomlgen
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Software Development :: Version Control
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
packages = setuptools_rust_tomlgen
zip_safe = True
install_requires = setuptools>=46.1; semantic_version>=2.6.0; toml>=0.9.0; setuptools_rust>=0.12,<1.0;
setup_requires = setuptools>=46.1; setuptools_scm[toml]>=3.4.3
python_requires = >=3.6

[options.entry_points]
distutils.commands =
    tomlgen_rust=setuptools_rust_tomlgen:tomlgen_rust
